--- a/package.json
+++ b/package.json
@@ -27,13 +27,20 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/app-scripts": "^3.2.4",
     "@ionic/storage": "^2.2.0",
     "angularfire2": "^5.1.3",
     "cordova-android": "8.0.0",
-    "cordova-ios": "5.0.1",
-    "cordova-plugin-fcm-with-dependecy-updated": "2.4.0",
-    "cordova-plugin-firebase": "2.0.5",
-    "cordova-sqlite-storage": "3.2.0",
+    "cordova-ios": "^4.5.5",
+    "cordova-plugin-cocoapod-support": "^1.6.0",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-fcm-with-dependecy-updated": "^2.4.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-sqlite-storage": "^3.2.0",
     "core-js": "^2.5.4",
     "firebase": "^6.0.2",
     "promise-polyfill": "^8.1.0",
@@ -46,7 +53,7 @@
     "@angular-devkit/build-angular": "~0.13.8",
     "@angular-devkit/core": "~7.3.8",
     "@angular-devkit/schematics": "~7.3.8",
-    "@angular/cli": "~7.3.8",
+    "@angular/cli": "7.3.9",
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
@@ -87,10 +94,11 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-cocoapod-support": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
